added bmi calculator and history activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:padding="@dimen/main_screen_main_layout_padding">
 
         <ImageView
@@ -35,6 +36,75 @@
                 android:textColor="@color/purple_700"
                 android:textSize="@dimen/start_button_label_text_size" />
         </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
+
+            <LinearLayout
+                android:id="@+id/ll_to_bmi_calc"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_marginStart="75dp"
+                android:background="@drawable/item_circular_color_accent_background"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BMI"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_calculator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Calculator"
+                android:textColor="@color/teal_700"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/ll_to_bmi_calc"
+                app:layout_constraintStart_toStartOf="@id/ll_to_bmi_calc"
+                app:layout_constraintTop_toBottomOf="@id/ll_to_bmi_calc" />
+
+            <LinearLayout
+                android:id="@+id/ll_to_history"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_marginEnd="75dp"
+                android:background="@drawable/item_circular_color_accent_background"
+                android:gravity="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/ic_baseline_history_50"
+                    android:contentDescription="image_history" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_history"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="History"
+                android:textColor="@color/teal_700"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/ll_to_history"
+                app:layout_constraintStart_toStartOf="@id/ll_to_history"
+                app:layout_constraintTop_toBottomOf="@id/ll_to_history" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
