--- a/app/src/main/res/layout/dialog_confirm_back.xml
+++ b/app/src/main/res/layout/dialog_confirm_back.xml
@@ -16,7 +16,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
@@ -35,7 +35,7 @@
         <Button
             android:id="@+id/tv_yes"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:background="@color/teal_200"
@@ -48,7 +48,7 @@
         <Button
             android:id="@+id/tv_no"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:background="@color/teal_200"
